# geosample-ai

./: .gitignore  .pre-commit-config.yaml  GeoSample_AI_Results.ipynb  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: credentials.example.yaml  pipeline.yaml
docs/: architecture.md
models/ner/best_model/: meta.json
models/ner/best_model/ner/: moves
models/ner/final_model/vocab/: strings.json
models/scoring/: feature_importance.csv  metrics.json
models/topic/: lda_model.expElogbeta.npy  topic_summary.json
notebooks/: 01_eda.ipynb
scripts/: download_all.py  download_sentinel2.py  run_pipeline.py
src/ingestion/: ni43101.py  sentinel2.py  usgs.py
src/intelligence/ner/: annotator.py  train.py
src/intelligence/scoring/: commodity_classifier.py  gbm_scorer.py  retrain_with_deposits.py
src/intelligence/topic_modeling/: lda.py
src/platform/api/: main.py
src/platform/dashboard/: package-lock.json  package.json
src/platform/dashboard/public/: alteration_bounds.json
src/platform/dashboard/src/: App.css  App.jsx
src/platform/dashboard/src/components/: AlterationLayer.jsx  ModelStats.jsx  PredictionPanel.jsx  ReportComparison.jsx  ReportUpload.jsx  SiteMap.jsx
src/processing/nlp/: cleaner.py
src/processing/spectral/: band_analysis.py
tests/unit/: test_band_analysis.py
