[project]
name = "geosample-ai"
version = "0.1.0"
description = "AI-guided sample location optimizer for copper mineral exploration in Central and West Africa"
authors = [{ name = "Ganesh Satyabrata", email = "gsatyabrata99@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
